# CPPLabs5Sem

./: CMakeLists.txt  Makefile  README.md
src/: PluginManager.cpp  PluginManager.h  RawDataProcessor.cpp  RawDataProcessor.h  SentenceProcessor.cpp  SentenceProcessor.h  Tokenezator.cpp  Tokenezator.h  main.cpp
src/Interfaces/: IOperation.h  PluginInterface.h
src/StandartOperations/: DivOperation.h  IOperation.h  MinusOperation.h  MultOperation.h  PlusOperation.h  UnarMinusOperation.h
src/core/: CalculatorModule.cpp  PluginManager.cpp  RawDataProcessor.cpp  Tokenezator.cpp
src/core/headers/: CalculatorModule.h  PluginManager.h  RawDataProcessor.h  Tokenezator.h
src/operations/: DivOperation.h  MinusOperation.h  MultOperation.h  PlusOperation.h  UnarMinusOperation.h
src/plugins/: DegOperation.cpp  PluginInterface.h  SinOperation.cpp
test/: SimpleTest.cpp
